# status-feed-notifier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
packaging/: dev.tiago.StatusFeedNotifier.desktop.in
scripts/: install.sh  package-release.sh  uninstall.sh
src/: main.rs
