[package]
name = "status-feed-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_9", "gtk_v4_22"] }
anyhow = "1.0.100"
directories = "6.0.0"
feed-rs = "2.3.1"
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_22"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
rusqlite = "0.40.1"
sha2 = "0.10.9"
