[package]
name = "status-feed-notifier"
version = "0.1.0"
edition = "2024"
description = "Subscribe to RSS and Atom status feeds and receive desktop notifications."

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"] }
anyhow = "1.0.100"
directories = "6.0.0"
feed-rs = "2.3.1"
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_14"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
rusqlite = "0.40.1"
sha2 = "0.10.9"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.5", default-features = false, features = ["blocking", "async-io"] }
